<resources>
    <string name="app_name">Thrifty</string>
    <!-- Strings related to login -->
    <string name="prompt_email">e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_up">Register</string>
    <string name="login_go_to_register_label">New member?</string>
    <string name="register_title">Register</string>
    <string name="apply_button">Apply</string>
    <string name="email_label">e-mail</string>
    <string name="nickname_label">nickname</string>
    <string name="password_label">password</string>
    <string name="password_re_label">re : password</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="cars_title">Cars</string>
    <string name="clothes_title">Clothes</string>
    <string name="electronics_title">Electronics</string>
    <string name="other_title">Other</string>
    <string name="search_menu">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_edit">Edit</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading_text">Please wait...</string>
    <string name="add_image_title">Add new article</string>
    <string name="add_image_next_button">Next</string>

    <string name="add_image_find_button">Locate</string>
    <string name="category_title_text">Category</string>
    <string name="add_info_title_title">Title</string>
    <string name="add_info_title_smallcase">title</string>
    <string name="add_info_description">Description</string>
    <string name="add_info_description_lowcase">description</string>
    <string name="add_image_subtitle">3/3 - Image</string>
    <string name="add_info_subtitle">1/3 - Article info</string>
    <string name="add_location_subtitle">2/3 - Location</string>
    <string name="add_location_upload_button">Upload</string>
    <string name="addLocationCurrentLocation">Location: %1$s, %2$s</string>
    <string name="add_info_price_title">Price</string>
    <string name="add_info_price_hint">price</string>
    <string name="gps_network_not_enabled">GPS network not enabled</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="Cancel">Cancel</string>
    <string-array name="categories">
        <item>Cars</item>
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Other</item>
        </string-array>


    <string name="comment_date_now">Just now </string>
    <string name="x_minutes_ago">%1$d mins ago </string>
    <string name="one_hour_ago">One hour ago </string>
    <string name="x_hours_ago">%1$d hours ago </string>
    <string name="one_day_ago">A day ago </string>
    <string name="x_days_ago">%1$d days ago </string>
    <string name="chat_send_message">Send message...</string>
    <string name="delete_dialog">Delete?</string>
    <string name="profile_title">%1$s\'s profile</string>
    <string name="delete_yes">Yes, delete</string>
    <string name="delete_no">No, don\'t delete</string>
    <string name="logout_dialog">Logout?</string>
    <string name="logout_yes">Yes, I am leaving</string>
    <string name="logout_no">No, I am staying</string>
    <string name="search_hint">Search...</string>
</resources>