<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:backgroundTint="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/delete_dialog"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColorOnPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDeleteYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorPrimaryLight"
        android:enabled="true"
        android:text="@string/delete_yes"
        android:textColor="@color/textColorOnPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonDeleteNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:enabled="true"
        android:text="@string/delete_no"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>